2004-07-21  Seth Burgess <sjburges@gimp.org>
	* TODO: added some items
	* Gimp.pm: pod cleanup and reorg
	* Gimp/Fu.pm: bit of pod cleanup

2004-06-28  Seth Burgess <sjburges@gimp.org>
	* UI/UI.xs: fixed an XS error that shows up for GCC 2.95; 
          shouldn't create a temp variable in CODE: - put it in PREINIT:
          Reported by Marc 'HE' Brockschmidt <he@debian.org>.
          Fixed a typo in GradientSelect.
        
        * examples/burst: s/undo_push/undo
       

2004-04-17  Seth Burgess <sjburges@gimp.org>
	* updated TODO for suggestion in bug 117349

2004-04-17  Seth Burgess <sjburges@gimp.org>
	* added patch from Carol Spears, bug #100356.  Technically, this is
	  breaking the API after the release, but I really doubt many people
	  are calling colorhtml all that much.

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* Made 2.0 release.

        * Gimp.pm 
        * Changes: updated docs to reflect

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* examples/fade-alpha: s/RADIAL/GRADIENT_RADIAL/ fixes bug #141444
        * examples/selective_sharpen: change threshold to be zero based, fix 
          a bug if no selection was present. 

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* examples/selective_sharpen: use a curve suggested by tigert 
          to "Basically just darken the very dark noisy grays to black 
          and boost everything else."

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* examples/selective_sharpen: added new script based on tigert's 
	  method.
        * Makefile.PL: install it 
	* MANIFEST: updated accordingly

2004-05-15  Seth Burgess <sjburges@gimp.org>
	* Changes
	* README
	* README.win32
	* TODO: updated to bring into line with current 2.0

	* examples/examples.TODO: removed scripts from here

	* MANIFEST: alphabetized scripts for easier maintenance
	* Makefile.PL: upped Gtk requirement to at least rev 1.0, removed
	scm2scm from EXE_FILES, removed REC_DECENT warning.
